Improve model training workflow by adding transactional boundaries, logging, and error handling to `ModelController`, `InitializationService`, and `MachineLearningService`.